--- a/wbs-rest/src/main/resources/application.properties
+++ b/wbs-rest/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=drop-and-create
