--- a/wbs-rest/src/main/resources/application.properties
+++ b/wbs-rest/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=drop-and-create
+spring.datasource.initialization-mode=always
