Restrukturierung der Mavenstruktur und Einbindung von Angular in die Resourcen.

--- a/wbs-alarm/wbs-service/pom.xml
+++ b/wbs-alarm/wbs-service/pom.xml
@@ -2,20 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>wbs-alarm</artifactId>
+        <groupId>de.hs-fulda.et.it.project</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
-    </parent>
-
-    <!-- Anhand folgendes Beispiels -->
-    <!-- https://octoperf.com/blog/2018/03/08/securing-rest-api-spring-security/ -->
-
-    <groupId>de.hs-fulda.et.it.project</groupId>
-    <artifactId>wbs-rest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>wbs-service</artifactId>
 
     <properties>
         <java.version>1.8</java.version>
@@ -31,6 +25,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>de.hs-fulda.et.it.project</groupId>
+            <artifactId>wbs-frontend</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -58,6 +58,7 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang.version}</version>
         </dependency>
+
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
@@ -166,6 +167,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
