--- a/wbs-alarm/wbs-frontend/pom.xml
+++ b/wbs-alarm/wbs-frontend/pom.xml
@@ -26,55 +26,41 @@
         <version>1.6</version>
         <configuration>
           <nodeVersion>v8.9.0</nodeVersion>
-          <yarnVersion>v1.3.2</yarnVersion>
         </configuration>
         <executions>
+
           <execution>
-            <id>install node and yarn</id>
+            <id>install node and npm</id>
             <goals>
-              <goal>install-node-and-yarn</goal>
+              <goal>install-node-and-npm</goal>
             </goals>
             <phase>generate-resources</phase>
           </execution>
+
           <execution>
-            <id>yarn install</id>
+            <id>npm install</id>
             <goals>
-              <goal>yarn</goal>
+              <goal>npm</goal>
             </goals>
+            <phase>generate-resources</phase>
             <configuration>
               <arguments>install</arguments>
             </configuration>
           </execution>
+
           <execution>
-            <id>yarn lint</id>
+            <id>webpack build</id>
             <goals>
-              <goal>yarn</goal>
+              <goal>webpack</goal>
             </goals>
-            <configuration>
-              <arguments>lint</arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>yarn build</id>
-            <goals>
-              <goal>yarn</goal>
-            </goals>
+
             <phase>generate-resources</phase>
+
             <configuration>
-              <arguments>build</arguments>
+              <arguments>--progress --profile --bail --display-error-details --config config/webpack.prod.js</arguments>
             </configuration>
           </execution>
-          <execution>
-            <id>yarn test</id>
-            <goals>
-              <goal>yarn</goal>
-            </goals>
-            <phase>test</phase>
-            <configuration>
-              <arguments>test --watch false</arguments>
-              <!--<failOnError>true</failOnError>-->
-            </configuration>
-          </execution>
+
         </executions>
       </plugin>
     </plugins>
