--- a/wbs-alarm/wbs-frontend/package.json
+++ b/wbs-alarm/wbs-frontend/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --progress --watch --profile --open --config config/webpack.dev.js",
 		"build": "npm run clean:dist && webpack --progress --profile --bail --display-error-details --config config/webpack.prod.js",
+		"clean_all": "rm -rf node_modules/ && rm -rf node/ && rm -rf dist/",
 		"clean:dist": "npm run rimraf -- dist",
 		"rimraf": "rimraf",
 		"test": "npm run lint",
