--- a/wbs-alarm/wbs-frontend/package.json
+++ b/wbs-alarm/wbs-frontend/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"license": "MIT",
 	"scripts": {
-		"start": "webpack-dev-server --progress --watch --profile --open --config config/webpack.dev.js",
+		"start": "webpack-dev-server --progress --watch --profile --config config/webpack.dev.js",
 		"build": "npm run clean:dist && webpack --progress --profile --bail --display-error-details --config config/webpack.prod.js",
 		"clean_all": "rm -rf node_modules/ && rm -rf node/ && rm -rf dist/",
 		"clean:dist": "npm run rimraf -- dist",
@@ -14,44 +14,71 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@plentymarkets/terra-components": "^3.5.1",
-		"core-js": "^2.6.5"
+		"@amcharts/amcharts3-angular": "^2.2.4",
+		"@angular/animations": "~7.2.15",
+		"@angular/common": "~7.2.15",
+		"@angular/compiler": "~7.2.15",
+		"@angular/core": "~7.2.15",
+		"@angular/forms": "~7.2.15",
+		"@angular/http": "~7.2.15",
+		"@angular/material": "~7.3.7",
+		"@angular/cdk": "~7.3.7",
+		"@angular/platform-browser": "~7.2.15",
+		"@angular/platform-browser-dynamic": "~7.2.15",
+		"@angular/router": "~7.2.15",
+		"@plentymarkets/terra-components": "4.1.2",
+		"angular-l10n": "^7.2.0",
+		"angularx-qrcode": "^1.6.1",
+		"ckeditor4-angular": "^1.0.0-beta",
+		"core-js": "^3.1.4",
+		"json-formatter-js": "^2.2.1",
+		"lodash": "^4.17.14",
+		"ng2-dragula": "^1.5.0",
+		"ngx-countdown": "^3.2.0",
+		"ngx-device-detector": "^1.3.9",
+		"ngx-moment": "^3.4.0",
+		"properties": "^1.2.1",
+		"rxjs": "^6.5.2",
+		"ts-md5": "1.2.4",
+		"zone.js": "~0.8.26"
 	},
 	"devDependencies": {
-		"@types/jasmine": "^3.3.5",
-		"@types/jquery": "^3.3.29",
-		"@types/node": "^11.11.0",
+		"@types/jasmine": "^3.3.13",
+		"@types/jquery": "^3.3.30",
+		"@types/lodash": "^4.14.136",
+		"@types/node": "^12.6.2",
+		"@types/uuid": "^3.4.5",
 		"angular2-template-loader": "^0.6.2",
-		"assets-webpack-plugin": "^3.9.7",
-		"autoprefixer": "^9.4.5",
-		"codelyzer": "^4.5.0",
-		"copy-webpack-plugin": "^5.0.0",
-		"css-loader": "^2.1.0",
-		"fork-ts-checker-webpack-plugin": "^0.5.2",
+		"assets-webpack-plugin": "^3.9.10",
+		"autoprefixer": "^9.6.1",
+		"base64-inline-loader": "^1.1.1",
+		"circular-dependency-plugin": "^5.0.2",
+		"codelyzer": "^5.1.0",
+		"copy-webpack-plugin": "^5.0.3",
+		"css-loader": "^2.1.1",
+		"cssnano": "^4.1.10",
+		"file-loader": "^4.0.0",
+		"fork-ts-checker-webpack-plugin": "^1.3.7",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
-		"http-server": "^0.11.1",
-		"jasmine-core": "^3.1.0",
+		"jasmine-core": "^3.4.0",
 		"json-loader": "^0.5.7",
-		"mini-css-extract-plugin": "^0.5.0",
-		"node-sass": "^4.11.0",
-		"optimize-css-assets-webpack-plugin": "^5.0.1",
+		"mini-css-extract-plugin": "^0.7.0",
+		"node-sass": "^4.12.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"postcss-loader": "^3.0.0",
 		"raw-loader": "^1.0.0",
-		"resolve-url-loader": "^3.0.0",
 		"rimraf": "^2.6.3",
-		"sass-loader": "^7.0.1",
-		"sass-resources-loader": "^2.0.0",
+		"sass-loader": "^7.1.0",
+		"sass-resources-loader": "1.3.3",
 		"style-loader": "^0.23.1",
-		"terser-webpack-plugin": "^1.2.1",
-		"ts-loader": "^5.2.2",
-		"tslint": "^5.12.1",
-		"tslint-eslint-rules": "^5.1.0",
-		"typescript": "~3.3.3333",
-		"url-loader": "^1.1.2",
-		"webpack": "^4.28.4",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.14",
+		"ts-loader": "^6.0.4",
+		"tslint": "^5.18.0",
+		"tslint-eslint-rules": "^5.4.0",
+		"typescript": "^3.5.3",
+		"webpack": "^4.35.3",
+		"webpack-cli": "^3.3.5",
+		"webpack-dev-server": "^3.7.2",
 		"webpack-merge": "^4.2.1"
 	}
 }
