--- a/wbs-alarm/wbs-frontend/pom.xml
+++ b/wbs-alarm/wbs-frontend/pom.xml
@@ -25,7 +25,7 @@
         <artifactId>frontend-maven-plugin</artifactId>
         <version>1.6</version>
         <configuration>
-          <nodeVersion>v8.9.0</nodeVersion>
+          <nodeVersion>v12.9.1</nodeVersion>
         </configuration>
         <executions>
 
@@ -44,7 +44,7 @@
             </goals>
             <phase>generate-resources</phase>
             <configuration>
-              <arguments>install</arguments>
+              <arguments>ci</arguments>
             </configuration>
           </execution>
 
