--- a/wbs-alarm/wbs-frontend/pom.xml
+++ b/wbs-alarm/wbs-frontend/pom.xml
@@ -20,44 +20,58 @@
       </resource>
     </resources>
     <plugins>
+
       <plugin>
-        <groupId>com.github.eirslett</groupId>
-        <artifactId>frontend-maven-plugin</artifactId>
-        <version>1.6</version>
-        <configuration>
-          <nodeVersion>v12.9.1</nodeVersion>
-        </configuration>
+        <artifactId>exec-maven-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <version>1.6.0</version>
         <executions>
 
+          <!-- npm run clean -->
           <execution>
-            <id>install node and npm</id>
+            <id>npm run clean_all</id>
+            <phase>clean</phase>
             <goals>
-              <goal>install-node-and-npm</goal>
+              <goal>exec</goal>
             </goals>
-            <phase>generate-resources</phase>
-          </execution>
-
-          <execution>
-            <id>npm install</id>
-            <goals>
-              <goal>npm</goal>
-            </goals>
-            <phase>generate-resources</phase>
             <configuration>
-              <arguments>ci</arguments>
+              <executable>npm</executable>
+              <arguments>
+                <argument>run</argument>
+                <argument>clean_all</argument>
+              </arguments>
             </configuration>
           </execution>
 
+          <!-- npm ci -->
           <execution>
-            <id>webpack build</id>
+            <id>npm install</id>
+            <phase>generate-sources</phase>
             <goals>
-              <goal>webpack</goal>
+              <goal>exec</goal>
             </goals>
-
-            <phase>generate-resources</phase>
-
             <configuration>
-              <arguments>--progress --profile --bail --display-error-details --config config/webpack.prod.js</arguments>
+              <executable>npm</executable>
+              <arguments>
+                <argument>ci</argument>
+              </arguments>
+            </configuration>
+          </execution>
+
+
+          <!-- npm run build -->
+          <execution>
+            <id>npm run build</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>npm</executable>
+              <arguments>
+                <argument>run</argument>
+                <argument>build</argument>
+              </arguments>
             </configuration>
           </execution>
 
