--- a/wbs-alarm/wbs-frontend/pom.xml
+++ b/wbs-alarm/wbs-frontend/pom.xml
@@ -70,7 +70,7 @@
               <executable>npm</executable>
               <arguments>
                 <argument>run</argument>
-                <argument>build</argument>
+                <argument>just_build</argument>
               </arguments>
             </configuration>
           </execution>
