--- a/wbs-alarm/wbs-service/src/main/resources/application.properties
+++ b/wbs-alarm/wbs-service/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.initialization-mode=always
 ## characterEncoding=utf8 == UTF-8 ist standard
 spring.datasource.url=jdbc:mysql://localhost:3306/wbsalarm?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=PleaseChangeMe!
+spring.datasource.password=PLEASECHANGEME!
