"Passwort vergessen" Option - Anforderung per E-Mail

--- a/wbs-alarm/wbs-service/pom.xml
+++ b/wbs-alarm/wbs-service/pom.xml
@@ -39,6 +39,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- send email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#build-tool-plugins-maven-packaging -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
