--- a/wbs-alarm/wbs-service/src/main/resources/application.properties
+++ b/wbs-alarm/wbs-service/src/main/resources/application.properties
@@ -9,9 +9,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/wbsalarm?useUnicode=true&chara
 spring.datasource.username=root
 spring.datasource.password=PLEASECHANGEME!
 # Mail Settings
+wbs.mail.active=false
+wbs.mail.personal=Personal
 spring.mail.host=localhost
 spring.mail.port=587
-spring.mail.personal=Personal
 spring.mail.username=info@localhost
 spring.mail.password=secret
 spring.mail.test-connection=false
