--- a/wbs-alarm/wbs-service/pom.xml
+++ b/wbs-alarm/wbs-service/pom.xml
@@ -22,7 +22,7 @@
         <junit.jupiter.version>5.1.1</junit.jupiter.version>
         <junit.vintage.version>5.1.1</junit.vintage.version>
         <junit.platform.version>1.1.1</junit.platform.version>
-        <mockito.version>2.17.0</mockito.version>
+        <mockito.version>3.1.0</mockito.version>
 
         <tomcat.version>9.0.26</tomcat.version>
         <start-class>de.hsfulda.et.wbs.Application</start-class>
@@ -126,6 +126,12 @@
             <version>${junit.vintage.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -133,22 +139,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.1.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.1.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
