--- a/wbs-alarm/wbs-frontend/package.json
+++ b/wbs-alarm/wbs-frontend/package.json
@@ -12,6 +12,7 @@
 		"rimraf": "rimraf",
 		"test": "ng test",
 		"test-headless": "ng test --browsers=ChromeHeadless",
+		"test-headless-coverage": "ng test --watch=false --codeCoverage --browsers=ChromeHeadless",
 		"lint": "ng lint",
 		"reinstall_win": "rd /s /q \"node_modules\" && npm i",
 		"reinstall_ux": "rm -rf node_modules/ && npm i"
