--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -9,6 +9,14 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+        ports:
+          - 32574:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +24,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Install with Maven
-        run: cd wbs-alarm/ && mvn install --file pom.xml
-      - name: Build with Maven
-        run: cd wbs-alarm/ && mvn -B package --file pom.xml
+      - name: Verify MySQL connection from host
+        run: |
+        sudo apt-get install -y mysql-client
+        mysql --host 127.0.0.1 --port 32574 -uroot -ppassword -e "SHOW DATABASES"
+#      - name: Install with Maven
+#        run: cd wbs-alarm/ && mvn install --file pom.xml
+#      - name: Build with Maven
+#        run: cd wbs-alarm/ && mvn -B package --file pom.xml
