--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Verify MySQL connection from host
         run: |
         sudo apt-get install -y mysql-client
-        mysql --host 127.0.0.1 --port 32574 -uroot -ppassword -e "SHOW DATABASES"
+        mysql --host 127.0.0.1 --port 32574 -uroot -ppassword
