--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -29,4 +29,8 @@ jobs:
         run: |
           sudo apt-get install -y mysql-client
           mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -ppassword -e "SHOW DATABASES"
+      - name: Install with Maven
+        run: cd wbs-alarm/ && mvn install --file pom.xml
+      - name: Build with Maven
+        run: cd wbs-alarm/ && mvn -B package --file pom.xml
 
