--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -29,11 +29,12 @@ jobs:
         run: |
           sudo apt-get install -y mysql-client
           mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pPLEASECHANGEME! -e "SHOW DATABASES"
+      - name: Compile with Maven
+        run: cd wbs-alarm/ && mvn compile --file pom.xml
       - name: Install with Maven
         run: |
           mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pPLEASECHANGEME!
           cd wbs-alarm/ && mvn install --file pom.xml
-      - name: Build with Maven
-        run: cd wbs-alarm/ && mvn -B package --file pom.xml
+
 
 
