--- a/wbs-alarm/wbs-service/src/test/resources/application.properties
+++ b/wbs-alarm/wbs-service/src/test/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://localhost:3306/wbsalarm?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=PLEASECHANGEME!
+spring.datasource.continue-on-error=true
 # Mail Settings
 wbs.mail.active=false
 wbs.mail.personal=Personal
