- added tests and added lint check in frontend

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,5 +1,5 @@
 # This will be displayed in every PR
-name: Compare to base
+name: Check integrity Frontend
 
 # This will control when the action will be run. In this case the action will be run on every PR
 on: [pull_request]
@@ -17,14 +17,27 @@ jobs:
 
       # Do a clean install on unix
       - name: Clean install
-        run: cd wbs-alarm/wbs-frontend/ && npm run reinstall_ux
+        run: |
+          cd wbs-alarm/wbs-frontend/
+          npm run reinstall_ux
 
       # Do a test build
       - name: Run build
-        run: cd wbs-alarm/wbs-frontend/ && npm run build
+        run: |
+          cd wbs-alarm/wbs-frontend/
+          npm run build
 
       # Do a run of the automated tests
       - name: Run tests
-        run: cd wbs-alarm/wbs-frontend/ && npm run test-headless-coverage
+        run: |
+          cd wbs-alarm/wbs-frontend/
+          npm run test-headless-coverage
+
+      # Do a lint check
+      - name: Run lint check
+        run: |
+          cd wbs-alarm/wbs-frontend/
+          npm run reinstall_ux
+          npm run lint
 
 
