--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -22,17 +22,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # Check if the connection to the MySQL Data-Base in the docker container is valid
+      - name: Verify MySQL connection from host
+        run: |
+          sudo apt-get install -y mysql-client
+          mysql --host 127.0.0.1 --port 3306 -uroot -pPLEASECHANGEME! -e "SHOW DATABASES"
+
       # Set up the Java Development Kit
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-
-      # Check if the connection to the MySQL Data-Base in the docker container is valid
-      - name: Verify MySQL connection from host
-        run: |
-          sudo apt-get install -y mysql-client
-          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pPLEASECHANGEME! -e "SHOW DATABASES"
 
       # Check if the project compiles correctly
       - name: Compile with Maven
