--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -42,9 +42,8 @@ jobs:
       # Test the application
       - name: Install with Maven
         run: |
-          mysql --host 127.0.0.1 --port 3306 -uroot -pPLEASECHANGEME!
           cd wbs-alarm/
-          mvn install --file pom.xml
+          mvn test --file pom.xml
 
 
 
