--- a/wbs-alarm/wbs-frontend/angular.json
+++ b/wbs-alarm/wbs-frontend/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/META-INF/resources",
             "deleteOutputPath": true,
             "index": "src/index.html",
