--- a/wbs-alarm/wbs-frontend/package.json
+++ b/wbs-alarm/wbs-frontend/package.json
@@ -19,18 +19,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@plentymarkets/terra-components": "^5.0.0-beta.12",
-    "angular-l10n": "^8.1.2",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@plentymarkets/terra-components": "^10.1.0",
+    "angular-l10n": "^10.0.0",
     "bootstrap": "^4.4.1",
     "ckeditor4-angular": "^1.0.1",
     "htmlhint": "~0.10.3",
@@ -41,23 +41,24 @@
     "mydatepicker": "^2.6.8",
     "ng2-ace-editor": "^0.3.9",
     "ngx-bootstrap": "^4.3.0",
-    "ngx-quill": "^5.2.0",
+    "ngx-quill": "^12.0.1",
     "path": "^0.12.7",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
     "tippy.js": "^5.1.4",
     "ts-keycode-enum": "^1.0.6",
-    "zone.js": "~0.9.1"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "~8.3.25",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@plentymarkets/terra-lint-rules": "^0.0.4",
     "@types/jasmine": "~3.3.13",
-    "@types/node": "^12.0.12",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -65,9 +66,9 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.4.0",
-    "tslint": "~5.18.0",
+    "tslint": "~6.1.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   },
   "resolutions": {
     "@babel/preset-env": "7.5.5"
