--- a/wbs-alarm/wbs-frontend/package.json
+++ b/wbs-alarm/wbs-frontend/package.json
@@ -20,28 +20,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.6",
-    "@angular/cdk": "^10.2.7",
+    "@angular/cdk": "^11.2.5",
     "@angular/common": "^11.2.6",
     "@angular/compiler": "^11.2.6",
     "@angular/core": "^11.2.6",
     "@angular/forms": "^11.2.6",
-    "@angular/material": "^10.2.7",
+    "@angular/material": "^11.2.5",
     "@angular/platform-browser": "^11.2.6",
     "@angular/platform-browser-dynamic": "^11.2.6",
     "@angular/router": "^11.2.6",
     "@plentymarkets/terra-components": "^11.0.0",
-    "angular-l10n": "^10.0.0",
+    "@plentymarkets/terra-icons": "latest",
+    "angular-l10n": "^11.0.0",
     "bootstrap": "^4.4.1",
     "ckeditor4-angular": "^1.0.1",
     "htmlhint": "~0.10.3",
-    "iban": "^0.0.12",
+    "iban": "^0.0.14",
     "interactjs": "1.3.4",
-    "jquery": "^3.5.0",
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.24.0",
-    "mydatepicker": "^2.6.8",
+    "mydatepicker": "^9.0.2",
     "ng2-ace-editor": "^0.3.9",
-    "ngx-bootstrap": "^4.3.0",
-    "ngx-quill": "^12.0.1",
+    "ngx-bootstrap": "^6.1.0",
+    "ngx-quill": "^13.2.0",
     "path": "^0.12.7",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
@@ -60,12 +61,12 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "~5.0.2",
     "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "tslint": "~6.1.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "~4.0.7"
