--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,6 +1,6 @@
 # This workflow will build a Java project with Maven
 
-name: Backend-Integrity
+name: WBS-Alarm Full Build with Tests (Frontend + Backend)
 
 on: [pull_request]
 
@@ -33,17 +33,9 @@ jobs:
         with:
           java-version: 1.8
 
-      # Check if the project compiles correctly
-      - name: Compile with Maven
+      # Build with maven (verify)
+      # with this frontend-ci is not necessary (doing the same, just double)
+      - name: Maven Verify
         run: |
           cd wbs-alarm/
-          mvn compile --file pom.xml
-
-      # Test the application
-      - name: Install with Maven
-        run: |
-          cd wbs-alarm/
-          mvn test --file pom.xml
-
-
-
+          mvn verify --file pom.xml
