--- a/wbs-alarm/wbs-frontend/pom.xml
+++ b/wbs-alarm/wbs-frontend/pom.xml
@@ -75,6 +75,54 @@
                 </plugins>
             </build>
         </profile>
+
+
+        <profile>
+            <id>local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <version>1.6.0</version>
+                        <executions>
+                            <!-- npm run test-headless-coverage -->
+                            <execution>
+                                <id>npm run test</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>npm</executable>
+                                    <arguments>
+                                        <argument>run</argument>
+                                        <argument>test-headless-coverage</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+
+                            <!-- npm run lint -->
+                            <execution>
+                                <id>npm run lint</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>npm</executable>
+                                    <arguments>
+                                        <argument>run</argument>
+                                        <argument>lint</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <build>
@@ -85,7 +133,6 @@
         </resources>
 
         <plugins>
-
             <plugin>
                 <artifactId>exec-maven-plugin</artifactId>
                 <groupId>org.codehaus.mojo</groupId>
@@ -102,7 +149,8 @@
                         <configuration>
                             <executable>npm</executable>
                             <arguments>
-                                <argument>ci</argument>
+                                <argument>run</argument>
+                                <argument>reinstall_ux</argument>
                             </arguments>
                         </configuration>
                     </execution>
@@ -154,7 +202,6 @@
                             </arguments>
                         </configuration>
                     </execution>
-
                 </executions>
             </plugin>
         </plugins>
