--- a/wbs-alarm/wbs-frontend/package.json
+++ b/wbs-alarm/wbs-frontend/package.json
@@ -14,7 +14,7 @@
     "test-headless": "ng test --browsers=ChromeHeadless",
     "test-headless-coverage": "ng test --watch=false --codeCoverage --browsers=ChromeHeadless",
     "lint": "ng lint",
-    "reinstall_win": "rd /s /q \"node_modules\" && npm i",
+    "reinstall_win": "if exist \"node_modules\" (rd /s /q \"node_modules\" && npm i) && (npm i)",
     "reinstall_ux": "rm -rf node_modules/ && npm i"
   },
   "private": true,
