delete coverage folder on clean

--- a/wbs-alarm/wbs-frontend/package.json
+++ b/wbs-alarm/wbs-frontend/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve --aot",
     "just_build": "ng build --prod",
     "build": "ng build --prod",
-    "clean_all_win": "rd /s /q \"node_modules/\" && rd /s /q \"node/\" && rd /s /q \"dist/\"",
-    "clean_all_ux": "rm -rf node_modules/ && rm -rf node/ && rm -rf dist/",
+    "clean_all_win": "rd /s /q \"node_modules/\" && rd /s /q \"node/\" && rd /s /q \"dist/\" && rd /s /q \"coverage/\"",
+    "clean_all_ux": "rm -rf node_modules/ && rm -rf node/ && rm -rf dist/ && rm -rf coverage/",
     "clean:dist": "npm run rimraf -- dist",
     "rimraf": "rimraf",
     "test": "ng test",
